# FedGraph

./: .gitignore  CMakeLists.txt  README.md
algo_kernels/common_harness/: harness.cpp
algo_kernels/edge_centric/pagerank/: CMakeLists.txt  pagerank.h
algo_kernels/edge_centric/ss-bfs/: CMakeLists.txt  bfs.h  kernel_harness.h
algo_kernels/edge_centric/ss-cc/: CMakeLists.txt  cc.h  kernel_harness.h
algo_kernels/edge_centric/ss-pagerank/: CMakeLists.txt  pagerank.h
algo_kernels/edge_centric/ss-sssp/: CMakeLists.txt  kernel_harness.h  sssp.h
algo_kernels/edge_centric/sshe-sssp/: CMakeLists.txt  sssp.h
algo_kernels/edge_centric/sssp/: CMakeLists.txt  sssp.h
evaluation/: plot.py
include/: algo_kernel.h  comm_sync.h  edge_centric_algo_kernel.h  engine.h  graph.h  graph_io_util.h  harness.h  ss_edge_centric_algo_kernel.h  sshe_edge_centric_algo_kernel.h
include/task/: task.h
tools/: edge-cut_partitioner.py  extract_comm.py  extract_duration.py  format_graph_data.py  prepare_fed_data.py  run_cluster_participant.py  run_standalone_participant.py  tmp_extract_duration.py  tmp_prepare_fed_data.py  tmp_run_cluster_participant.py
